--- a/site-me-desapego/style.css
+++ b/site-me-desapego/style.css
@@ -24,7 +24,7 @@ body{
 header {
 	width: 100%;
 	height: 70px;
-	background: var(--Header, #338B85);
+	background: #338B85;
 }
 
 header > .interface{
@@ -52,7 +52,7 @@ header nav ul li{
 	gap: 12px;
 	border-radius: 15px;
 	border: 2px solid #FFF;
-	background: var(--header-borders, #5DC1B9);
+	background: #5DC1B9;
 	cursor: pointer;
 
 }
@@ -91,6 +91,7 @@ header nav ul li:hover{
 	font-style: normal;
 	font-weight: 500;
 	line-height: normal;
+    gap: 15px;
 	
 }
 
@@ -101,4 +102,14 @@ header nav ul li:hover{
 	font-weight: 600;
 	line-height: normal;
 	gap: 15px;
+}
+
+.botao{
+    display: inline-flex;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    Border-radius: 15px;
+    background:  #5DC1B9;
 }
