--- a/site-me-desapego/style.css
+++ b/site-me-desapego/style.css
@@ -18,6 +18,25 @@ body{
 
 }
 
+.botao button{
+    display: inline-block;
+    padding: 10px 40px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    Border-radius: 15px;
+    background:  #5DC1B9;
+	text-decoration: none;
+	font-weight: 600;
+	color: #fff;
+	cursor: pointer;
+}
+
+.botao button:hover{
+	transform: scale(1.05);
+	transition: .2s;
+}
+
 
 /* ESTILO DO CABEÇALHO */
 
@@ -45,22 +64,13 @@ header nav ul{
 
 header nav ul li{
 	display: inline-block;
-	padding: 10px 30px;
-	margin: 15px 15px;
+	padding: 10px 15px;
+	margin: 5px 5px;
 	justify-content: center;
 	align-items: center;
-	gap: 12px;
-	border-radius: 15px;
-	border: 2px solid #FFF;
-	background: #5DC1B9;
-	cursor: pointer;
 
 }
 
-header nav ul li:hover{
-	transform: scale(1.05);
-	transition: .2s;
-}
 
 /* ESTILO DO TOPO DO SITE */
 
@@ -76,7 +86,7 @@ header nav ul li:hover{
 
 .hero-items{
 	position: absolute;
-  	transform: translate(-50%, -50%); /* tcharaaaaaannnnn */
+  	transform: translate(-50%, -50%);
   	z-index: 1;
   	top: 50%;
   	left: 50%;
@@ -85,7 +95,7 @@ header nav ul li:hover{
 
 }
 
-.hero-items h1{
+#texto1{
 	color: #000;
 	font-size: 20px;
 	font-style: normal;
@@ -95,21 +105,11 @@ header nav ul li:hover{
 	
 }
 
-.hero-items h2{
+#texto2{
 	color:  #000;
 	font-size: 20px;
 	font-style: normal;
 	font-weight: 600;
 	line-height: normal;
 	gap: 15px;
-}
-
-.botao{
-    display: inline-flex;
-    padding: 10px;
-    justify-content: center;
-    align-items: center;
-    gap: 10px;
-    Border-radius: 15px;
-    background:  #5DC1B9;
 }
