--- a/site-me-desapego/style.css
+++ b/site-me-desapego/style.css
@@ -110,6 +110,13 @@ header nav ul li{
   	left: 50%;
   	padding: 1rem;
 	text-align: center;
+	display: flex;
+	flex-direction: column;
+	gap: 20px;
+}
+
+.hero-botao button{
+	margin-top: 30px;
 }
 
 #texto1{
