Página dos produtos

--- a/site-me-desapego/style.css
+++ b/site-me-desapego/style.css
@@ -112,7 +112,7 @@ body{
 	padding: 30px;
 	gap: 30px;
 }
-.rodape-logo{
+.footer-logo{
 	display: flex;
 	align-items: center;
 }
@@ -159,6 +159,10 @@ header > .interface{
 	justify-content: space-between;
 }
 
+header .header-logo{
+	font-size: 20px;
+	color: #FFF;
+}
 header a{
 	text-decoration: none;
 	color: #fff;
