--- a/site-me-desapego/style.css
+++ b/site-me-desapego/style.css
@@ -25,15 +25,12 @@ body{
     align-items: center;
     gap: 10px;
 	border: none;
-    Border-radius: 15px;
-    background:  #5DC1B9;
+    Border-radius: 10px;
+    background:  #2d9a91;
 	text-decoration: none;
 	font-weight: 600;
 	color: #fff;
 	cursor: pointer;
-}
-.menu-botao button{
-	border: 2px solid #FFF;
 }
 .botao button:hover{
 	transform: scale(1.05);
@@ -154,7 +151,7 @@ body{
 header {
 	width: 100%;
 	height: 70px;
-	background: #338B85;
+	background: #5DC1B9;
 }
 
 header > .interface{
