--- a/site-me-desapego/style.css
+++ b/site-me-desapego/style.css
@@ -346,3 +346,23 @@ header nav ul li{
 .footer-container-produto{
     margin-top: 100px;
 }
+
+/* ESTILO FAQ*/
+.faq-container{
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
+}
+.flex-faq{
+	display: flex;
+	flex-direction: column;
+	gap: 30px;
+	padding: 30px;
+	font-size: 25px;
+	text-align: center;
+}
+
+.footer-container-faq{
+	margin-top: 100px;
+}
+
