--- a/site-me-desapego/style.css
+++ b/site-me-desapego/style.css
@@ -385,3 +385,11 @@ header nav ul li{
 .footer-container-faq{
 	margin-top: 100px;
 }
+.miniatura{
+	height: 200px;
+	width: 200px;
+	border: 2px solid #5DC1B9;
+	border-radius: 10px;
+	display: flex;
+	justify-content: space-around;
+}
